--- a/webpage.css
+++ b/webpage.css
@@ -17,7 +17,7 @@ to ensure that the styling is applied*/
 	/* Secondary Colors are dark gold, warm gray, and gold highlight */
 	--dark-gold: #ad8500;
 	--warm-gray: #bbb0a6;
-	--gold-highlight: #ff34aa
+	--gold-highlight: #ffe4aa;
 }
 
 *{
