--- a/webpage.css
+++ b/webpage.css
@@ -28,6 +28,7 @@ to ensure that the styling is applied*/
 .topnav{
 	background-color: var(--gold);
 	overflow: hidden;
+	border: var(--gold);
 }
 
 /*top navigation tab link styling*/
