--- a/webpage.css
+++ b/webpage.css
@@ -6,8 +6,6 @@
 /*inline will override this external stylesheet, so make sure all inline is removed
 to ensure that the styling is applied*/
 
-/*applies to all elements*/
-
 /* CSS Variables */	
 :root{
 	/* Primary Colors are black and gold*/
@@ -20,8 +18,10 @@ to ensure that the styling is applied*/
 	--gold-highlight: #ffe4aa;
 }
 
-*{
-	font-family: Futura, Arial;
+/*downloaded font for titles & headers*/
+@font-face{
+	font-family: TrajanPro_Bold;
+	src: url(trajanpro_bold.otf);
 }
 
 /*top navigation*/
@@ -38,7 +38,9 @@ to ensure that the styling is applied*/
 	text-align:center;
 	padding: 14px 16px;
 	text-decoration: none;
-	font-size: 25px;	
+	font-weight: bold;
+	font-family: Futura, sans-serif;
+	font-size: 20px;	
 }
 
 .topnav a:hover{
@@ -46,12 +48,31 @@ to ensure that the styling is applied*/
 	scale(1.3);
 }
 
+/*top title*/
 h1{
 	font-weight: bold;
 	font-size: 50px;
+	font-family: TrajanPro_Bold;
 }
 
+/*second headings*/
+h2{
+	font-weight: bold;
+	font-size: 35px;
+	font-family: TrajanPro_Bold;
+}
+
+/*third headings*/
+h3{
+	font-weight: bold;
+	font-size: 22px;
+	font-family: Futura, sans-serif;
+}
+
+
+/*applies to all body text*/
 body {
-	background-color: var(--gold-highlight);
+	background-color: white;
 	font-family: Futura, Arial;
 }
+
