--- a/webpage.css
+++ b/webpage.css
@@ -9,7 +9,7 @@ to ensure that the styling is applied*/
 /* CSS Variables */
 .logo img{
 	float: left;
-	width: 109px;
+	width: 108.5px;
 	height: 96px;
 	margin-right: 35px;
 }
@@ -51,12 +51,14 @@ header{
 	text-decoration: none;
 	font-weight: bold;
 	font-family: Futura, sans-serif;
-	font-size: 20px;	
+	font-size: 20px;
+	transition: 0.3s;	
 }
 
 .topnav a:hover{
 	background-color: var(--gold-highlight);
 	scale(1.3);
+	opacity: 1;
 }
 
 /*top title*/
