--- a/webpage.css
+++ b/webpage.css
@@ -7,17 +7,15 @@
 to ensure that the styling is applied*/
 
 /* CSS Variables */
-.logo img{
-	float: left;
-	width: 108.5px;
-	height: 96px;
-	margin-right: 35px;
+*{
+	box-sizing: border-box;
+
 }
 
-header{
-	margin-bottom: 55px;
+body {
+	margin: 0;
 }
-
+	
 :root{
 	/* Primary Colors are black and gold*/
 	--black: black;
@@ -39,54 +37,87 @@ header{
 .topnav{
 	background-color: var(--gold);
 	overflow: hidden;
-	border: 1px solid var(--gold);
+	border-bottom: 8px solid var(--gold-highlight);
+	max-width: auto;
+	
 }
 
 /*top navigation tab link styling*/
 .topnav a {
 	float: right;
-	color: #000000;
+	color: var(--black);
 	text-align:center;
 	padding: 14px 16px;
 	text-decoration: none;
 	font-weight: bold;
 	font-family: Futura, sans-serif;
-	font-size: 20px;
-	transition: 0.3s;	
+	font-size: 15px;	
 }
 
 .topnav a:hover{
+	
+	position: relative;
+	color: var(--gold-highlight);
+	
+}
+
+.topnav a:after{
+	content: '';
+	position: absolute;
+	display: inline-block;
+	width: 90%;
+	transform: scaleX(0);
+	height: 3px;
+	bottom: 4px;
+	left: 6px;
+	right: 0;
 	background-color: var(--gold-highlight);
-	scale(1.3);
-	opacity: 1;
+	transition: transform 0.35s ease-out;
+}
+
+.topnav a:hover:after{
+	transform: scaleX(1);
 }
 
 /*top title*/
+.logo img{
+	float: left;
+	//width: 108.5px;
+	//height: 96px;
+	margin-right: 15px;
+	margin-left: 15px;
+}
+
+/*headings*/
+h1, h2{
+	font-weight: bold;
+	font-family: TrajanPro_Bold;
+}
+
 h1{
-	font-weight: bold;
-	font-size: 50px;
-	font-family: TrajanPro_Bold;
+	font-size: 40px;
 }
 
-/*second headings*/
 h2{
-	font-weight: bold;
-	font-size: 35px;
-	font-family: TrajanPro_Bold;
+	font-size: 45px;
 }
 
-/*third headings*/
 h3{
 	font-weight: bold;
-	font-size: 22px;
+	font-size: 20px;
 	font-family: Futura, sans-serif;
 }
 
 
-/*applies to all body text*/
-body {
+/*applies to all body text and their headers*/
+.bodytext{
 	background-color: white;
 	font-family: Futura, Arial;
+	width: 80%;
+	border: 0;
+	padding: 10px, 25px;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 
