--- a/webpage.css
+++ b/webpage.css
@@ -189,11 +189,16 @@ h3 {
     text-align: center;
 }
 
+/*advanced search box*/
 #myDIV{
     display:none;
 }
 
-
+fieldset {
+    border: 5px solid #000;
+    width: 75%;
+    margin: auto;
+}
 
 
 
