--- a/webpage.css
+++ b/webpage.css
@@ -194,6 +194,38 @@ h3 {
     display:none;
 }
 
+.search{
+    margin:auto;
+    width: max-content;
+}
+
+.selector {
+    padding: 0.5em;
+    height: 1em;
+    background-color: white;
+    border: 2px solid #AD8500;
+}
+
+.searchbar{
+    padding: 0.5em;
+    width: 50vw;
+    height: 1em;
+    border: 2px solid #AD8500;
+}
+
+.search-button {
+    font-size: 20px;
+    padding: 0.2em;
+    height: 1.5em;
+    background-color: white;
+    border: 2px solid #AD8500;
+}
+
+.advSearch{
+    height: 2.3em;
+    position:center;
+}
+
 fieldset {
     border: 5px solid #000;
     width: 75%;
